[package]
name = "cloning"
version = "1.0.0"
edition = "2021"
description = "Clone directory contents"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["clone", "cp", "fast", "progress"]
repository = "https://github.com/otechdo/cloning"
license-file = "LICENSE"

[dependencies]
ignore = "0.4.22"
indicatif = "0.17.8"
walkdir = "2.5.0"
