[package]
name = "cloning"
version = "2.1.0"
edition = "2021"
description = "Clone directory contents"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["clone", "cp", "fast", "progress"]
repository = "https://github.com/otechdo/cloning"
license = "AGPL-3.0"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
ignore = "0.4.22"
indicatif = "0.17.8"
